# raft-kv

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bench.sh  docker-compose.yml  profile.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/raft-bench/: Cargo.toml
crates/raft-bench/src/: main.rs
crates/raft-client/: Cargo.toml
crates/raft-client/src/: codec.rs  connection.rs  main.rs
crates/raft-core/: Cargo.toml
crates/raft-core/src/: config.rs  lib.rs  log.rs  message.rs  node.rs  state.rs
crates/raft-server/: Cargo.toml
crates/raft-server/src/: chaos.rs  codec.rs  error.rs  kv.rs  lib.rs  main.rs  metrics.rs  node.rs  storage.rs  transport.rs
crates/raft-server/tests/: chaos.rs  e2e.rs
docs/: failure-modes.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: raft.json
monitoring/grafana/provisioning/dashboards/: raft.yml
