[package]
name = "raft-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
raft-core = { path = "../raft-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
