[package]
name = "raft-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
raft-core = { version = "0.1.0", path = "../raft-core" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
